# cmd/server/main.go
@@ -10,6 +10,7 @@ import (
 	"net/http"
 
 	_ "github.com/Ficserbiyy/task-api/docs"
+	"github.com/Ficserbiyy/task-api/internal/auth"
 	"github.com/Ficserbiyy/task-api/internal/handlers"
 	"github.com/Ficserbiyy/task-api/internal/services"
 	httpSwagger "github.com/swaggo/http-swagger"
@@ -26,16 +27,18 @@ func main() {
 	}
 
 	mux := http.NewServeMux()
+	auth := auth.AuthMiddleware(db)
 
 	mux.HandleFunc("POST /auth/register", gormRepository.Register())
 	mux.HandleFunc("POST /auth/login", gormRepository.Login())
 	mux.HandleFunc("POST /auth/logout", handlers.Logout)
 
+	mux.Handle("POST /tasks", auth(http.HandlerFunc(gormRepository.Create())))
+
 	// http://127.0.0.1:8080/swagger/index.html
 	mux.HandleFunc("/swagger/", httpSwagger.WrapHandler)
 
 	log.Println("Server listening on http://127.0.0.1:8080")
-
 	if err := http.ListenAndServe("0.0.0.0:8080", mux); err != nil {
 		log.Fatalf("Server failed to start: %v", err)
 	}
